--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "symfony/framework-standard-edition",
-    "description": "The \"Symfony Standard Edition\" distribution",
+    "name": "Amenophis/sympress",
+    "description": "Symfony Wordress like engine",
     "autoload": {
         "psr-0": { "": "src/" }
     },
