--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -70,4 +70,4 @@ swiftmailer:
 fos_user:
     db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
     firewall_name: main
-    user_class: Amenophis\Sympress\UserBundle\Entity\User
+    user_class: Amenophis\Sympress\Bundle\UserBundle\Entity\User
